<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">UniHub</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="welcome">Welcome to UniHub</string>
    <string name="all">All</string>
    <string name="booking">Booking</string>
    <string name="detailed_information">Detailed Information</string>
    <string name="contacts">Contacts</string>
    <string name="do_you_wish_to_log_out">Do you wish to log out?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="notifications">Notifications</string>
    <string name="add_new_event">Add New Event</string>
    <string name="event_name">Event name*</string>
    <string name="suggestions">Suggestions</string>
    <string name="date">Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="remind_me">Remind me</string>
    <string name="create_event">Create Event</string>
    <string name="add_user">Add User</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter email</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter password</string>
    <string name="user_organization">User Organization</string>
    <string name="organization">Organization</string>
    <string name="create_user">Create User</string>
    <string name="user_account_was_successfully_created">User account was successfully created!</string>
    <string name="back">Back</string>
    <string name="hi_admin">Hi, Admin 👋</string>
    <string name="welcome_to_the_admin_dashboard">Welcome to the Admin Dashboard.</string>
    <string name="users">Users</string>
    <string name="clubs">Clubs</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="requests">Requests</string>
    <string name="profile">Profile</string>
    <string name="event_title">Event Title</string>
    <string name="time">Time</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="price">Price</string>
    <string name="get_ticket">Get Ticket</string>
    <string name="number_of_seats">"Number of seats: "</string>
    <string name="kzt_person">" KZT/Person"</string>
    <string name="booking_details">Booking details</string>
    <string name="transcript">Transcript:</string>
    <string name="status_with_dots">Status:</string>
    <string name="comment">Comment:</string>
    <string name="sender">"Sender: "</string>
    <string name="date_of_create">"Date of create: "</string>
    <string name="number_of_person">"Number of Person: "</string>
    <string name="no_time">No time</string>
    <string name="hours">%1$s hours</string>
    <string name="_1_hour">1 hour</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="october">October</string>
    <string name="september">September</string>
    <string name="august">August</string>
    <string name="july">July</string>
    <string name="june">June</string>
    <string name="may">May</string>
    <string name="april">April</string>
    <string name="march">March</string>
    <string name="february">February</string>
    <string name="january">January</string>
    <string name="sample_event">Sample Event</string>
    <string name="change_password">Change password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="change">Change</string>
    <string name="ask_me_anything">Ask me anything…</string>
    <string name="how_can_i_create_a_club">How can I create a club?</string>
    <string name="the_most_popular_club_for_sport">The most popular club for sport?</string>
    <string name="what_is_the_latest_news">What is the latest news?</string>
    <string name="follow">Follow</string>
    <string name="rating">Rating</string>
    <string name="likes">Likes</string>
    <string name="edit_profile">Edit profile</string>
    <string name="settings">Settings</string>
    <string name="comments">Comments</string>
    <string name="replies">Replies</string>
    <string name="error_please_fill_all_fields">Error: Please fill all fields</string>
    <string name="status">Status</string>
    <string name="comment_please_find_your_credentials_on_email">Comment: Please find your credentials on email</string>
    <string name="name_of_the_club">Name of the club*</string>
    <string name="goal_of_the_club">Goal of the club*</string>
    <string name="detailed_description">Detailed description*</string>
    <string name="club_financing">Club financing*</string>
    <string name="resources_equipment_needed_for_the_club">Resources/equipment needed for the club</string>
    <string name="methods_of_attracting_participants">Methods of attracting participants*</string>
    <string name="head_of_the_club">Head of the club*</string>
    <string name="phone">Phone*</string>
    <string name="other_communication_methods">Other communication methods*</string>
    <string name="send">Send</string>
    <string name="approved">Approved</string>
    <string name="cancelled">Cancelled</string>
    <string name="name_of_the_event">Name of the Event</string>
    <string name="date_of_the_event">Date of the Event:</string>
    <string name="short_description">Short Description:</string>
    <string name="goal_of_event">Goal of Event:</string>
    <string name="organizers">Organizers:</string>
    <string name="event_schedule">Event Schedule:</string>
    <string name="sponsorship">Sponsorship:</string>
    <string name="club_head">Club Head:</string>
    <string name="_new">New</string>
    <string name="create_new_post">Create new post</string>
    <string name="title">Title</string>
    <string name="add_media">Add media</string>
    <string name="post">Post</string>
    <string name="request_for_event">Request for event</string>
    <string name="create_booking_poster_for_event">Create booking poster for event</string>
    <string name="media_selected">Media selected</string>
    <string name="create_poster">Create Poster</string>
    <string name="seats">Seats:</string>
    <string name="fill_the_fields_to_create_a_club_and_get_admin_rights">Fill the fields to create a club and get admin rights</string>
    <string name="user_was_successfully_deleted">User was successfully deleted!</string>
    <string name="bio_data">Bio-data</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="gender">Gender</string>
    <string name="birth_date">Birth date</string>
    <string name="save">Save</string>
    <string name="position">Position</string>
    <string name="activity">Activity</string>
    <string name="club_name">Club name</string>
    <string name="edit_user">Edit User</string>
    <string name="suggestion">Suggestion</string>
    <string name="delete">Delete</string>
    <string name="ticket_request">Ticket Request</string>
    <string name="recommendation">Recommendation</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="recommendations_for_you">Recommendations for you</string>
    <string name="hi">"Hi, "</string>
    <string name="languages">Languages</string>
    <string name="log_into_account">Log into account</string>
    <string name="log_in">Log in</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="new_repost">New Repost</string>
    <string name="cancel">Cancel</string>
    <string name="share_your_thoughts">Share your thoughts…</string>
    <string name="my_account">My Account</string>
    <string name="make_changes_to_your_account">Make changes to your account</string>
    <string name="further_secure_your_account_for_safety">Further secure your account for safety</string>
    <string name="log_out">Log out</string>
    <string name="log_out_from_your_account">Log out from your account</string>
    <string name="about_app">About App</string>
    <string name="scan_me">Scan me</string>
    <string name="drop_files_here">Drop files here</string>
    <string name="register">Register</string>
    <string name="confirmation_is_sended">Confirmation is sended !</string>
    <string name="repost">Repost</string>
    <string name="quote">Quote</string>
    <string name="clubs_admins">Clubs/Admins</string>
    <string name="events">Events</string>
    <string name="files_selected">Files selected</string>
    <string name="reset_password">Reset password</string>
    <string name="we_will_email_you_n_a_link_to_reset_your_password">We will email you \n a link to reset your password.</string>
    <string name="we_have_sent_an_email_to_akniyet_serik_gmail_com_with_instructions_to_reset_your_password">We have sent an email to akniyet.serik@gmail.com with instructions to reset your password.></string>
    <string name="back_to_login">Back to login</string>
    <string name="privacy">Privacy</string>
    <string name="language">Language</string>
    <string name="about">About</string>
    <string name="confirm_password">Confirm password</string>
    <string name="create_an_account">Create an account</string>
    <string name="your_account_n_was_successfully_created">Your account \n was successfully created!</string>
    <string name="your_password_has_been_changed">Your password has been changed!</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="unfollow">Unfollow</string>
    <string name="your_request_has_been_sended_please_wait">Your request has been sended, please wait.</string>
    <string name="ok" tools:ignore="PrivateResource">OK</string>
    <string name="head_of_club">Head of club</string>
    <string name="admin">Admin</string>
    <string name="student">Student</string>
    <string name="user">User</string>
    <string name="role">Role</string>
    <string name="passwords_are_not_same">Passwords are not same</string>
    <string name="please_fill_all_fields">Please fill all fields</string>
    <string name="invalid_email">Invalid email</string>
    <string name="password_too_short">Password too short</string>
    <string name="name_too_short">Name too short</string>
    <string name="we_just_sent_6_digit_code_to">We just sent 6-digit code to</string>
    <string name="enter_it_bellow">enter it bellow:</string>
    <string name="verify_email">Verify email</string>
    <string name="send_to_different_email">Send to different email</string>
    <string name="wrong_email">Wrong email?</string>
    <string name="code">Code</string>
    <string name="example_example">example@example</string>
    <string name="about_app_description">UniHub is a centralized platform developed specifically for SDU students to enhance their university experience through active participation in student clubs. The app allows students to easily discover clubs, join events, track announcements, and stay informed about all campus activities.\nWith UniHub, we aim to build a stronger student community by simplifying communication between club leaders and members, encouraging collaboration, and making it easier to get involved in what matters to you.\nWhether you\'re a first-year student looking to connect or a club leader organizing events — UniHub is your go-to tool for managing and enjoying student life at SDU.</string>
    <string name="delete_post_confirmation">Do you want to delete post?</string>
</resources>