<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_300"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.calendar.AddEventFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/sh_20dp"
        android:backgroundTint="@color/white_1000"
        android:orientation="vertical"
        android:paddingVertical="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:fontFamily="@font/roboto_semibold"
            android:textColor="@color/black_1000"
            android:ellipsize="end"
            android:textAlignment="center"
            android:text="@string/add_new_event"/>

        <EditText
            android:id="@+id/etEventName"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/sh_edit_text"
            android:fontFamily="@font/roboto_regular"
            android:textColorHint="@color/grey_600"
            android:textColor="@color/grey_900"
            android:textSize="15sp"
            android:hint="@string/event_name"
            android:padding="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginHorizontal="16dp"/>

        <EditText
            android:id="@+id/etSuggestions"
            android:inputType="textMultiLine"
            android:layout_width="match_parent"
            android:layout_height="92dp"
            android:background="@drawable/sh_edit_text"
            android:fontFamily="@font/roboto_regular"
            android:textColorHint="@color/grey_600"
            android:textColor="@color/grey_900"
            android:textSize="15sp"
            android:hint="@string/suggestions"
            android:gravity="top"
            android:padding="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"/>

        <TextView
            android:id="@+id/etDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/sh_edit_text"
            android:fontFamily="@font/roboto_regular"
            android:textColorHint="@color/grey_600"
            android:textColor="@color/grey_900"
            android:textSize="15sp"
            android:hint="@string/date"
            android:padding="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            app:drawableEndCompat="@drawable/ic_calendar_event"
            app:drawableTint="@color/grey_300" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/etTimeStart"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/sh_edit_text"
                android:fontFamily="@font/roboto_regular"
                android:textColorHint="@color/grey_600"
                android:textColor="@color/grey_900"
                android:textSize="15sp"
                android:hint="@string/start_time"
                android:padding="16dp"
                android:layout_weight="1"
                app:drawableEndCompat="@drawable/ic_clock_event"
                app:drawableTint="@color/grey_300" />

            <TextView
                android:id="@+id/etTimeEnd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/sh_edit_text"
                android:fontFamily="@font/roboto_regular"
                android:textColorHint="@color/grey_600"
                android:textColor="@color/grey_900"
                android:textSize="15sp"
                android:hint="@string/end_time"
                android:padding="16dp"
                android:layout_marginStart="14dp"
                android:layout_weight="1"
                app:drawableEndCompat="@drawable/ic_clock_event"
                app:drawableTint="@color/grey_300" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:layout_marginHorizontal="18dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:fontFamily="@font/roboto_regular"
                android:textColor="@color/blue_800"
                android:ellipsize="end"
                android:text="@string/remind_me"
                android:layout_weight="1"/>

            <Switch
                android:id="@+id/swRemindMe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:thumbTint="@color/white_900"
                android:trackTint="@color/transparent"
                android:background="@drawable/sh_20dp"
                android:backgroundTint="@color/grey_200"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCreate"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/sh_12dp"
            android:backgroundTint="@color/blue_800"
            android:text="@string/create_event"
            android:textAllCaps="false"
            android:fontFamily="@font/roboto_semibold"
            android:textSize="16sp"
            android:textColor="@color/white_1000"
            android:layout_marginTop="56dp"
            android:layout_marginHorizontal="16dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>