<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.profile.AboutAppFragment">

    <LinearLayout
        android:id="@+id/llText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.611"
        tools:layout_editor_absoluteX="0dp"
        android:weightSum="7">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:layout_weight="2"
            android:src="@drawable/about_app"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/llText"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:padding="16dp"
            android:text="@string/about_app"
            android:textColor="@color/grey_900"
            android:textSize="20sp" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/roboto_regular"
                android:paddingHorizontal="24dp"
                android:text="@string/about_app_description"
                android:textSize="16sp" />

        </androidx.core.widget.NestedScrollView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnBack"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="28dp"
            android:background="@drawable/sh_12dp"
            android:backgroundTint="@color/blue_800"
            android:text="@string/back"
            android:textAllCaps="false"
            android:fontFamily="@font/roboto_semibold"
            android:textSize="16sp"
            android:textColor="@color/white_1000"
            android:layout_marginHorizontal="34dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>